new filters; new stats number; add test_data

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ IsoCirc_pipeline/isocirc/plot/*pyc
 IsoCirc_pipeline/dist/*
 IsoCirc_pipeline/build/*
 IsoCirc_pipeline/isocirc.egg-info/
+test_data/output/*
 
