--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-IsoCirc_pipeline/.idea/*
-IsoCirc_pipeline/anno/*
-IsoCirc_pipeline/data/*
-IsoCirc_pipeline/venv/*
+isoCirc_pipeline/.idea/*
+isoCirc_pipeline/anno/*
+isoCirc_pipeline/data/*
+isoCirc_pipeline/venv/*
 *pyc
-IsoCirc_pipeline/isocirc/*pyc
-IsoCirc_pipeline/isocirc/*/*pyc
-IsoCirc_pipeline/isocirc/tags
-IsoCirc_pipeline/isocirc/cscope*
-IsoCirc_pipeline/isocirc/plot/*pyc
-IsoCirc_pipeline/dist/*
-IsoCirc_pipeline/build/*
-IsoCirc_pipeline/isocirc.egg-info/
+.idea
+isoCirc_pipeline/isocirc/*pyc
+isoCirc_pipeline/isocirc/*/*pyc
+isoCirc_pipeline/isocirc/tags
+isoCirc_pipeline/isocirc/cscope*
+isoCirc_pipeline/isocirc/plot/*pyc
+isoCirc_pipeline/dist/*
+isoCirc_pipeline/build/*
+isoCirc_pipeline/isocirc.egg-info/
 test_data/output/*
 
